@@ -3,7 +3,8 @@ PREFIX=/usr
 
 PROJECT=thekraken
 PROJ_CFLAGS=-Wall -Wshadow -D_GNU_SOURCE -O2 $(CFLAGS)
-PROJ_LDFLAGS=-lm -lrt $(LDFLAGS)
+PROJ_LDFLAGS=$(LDFLAGS)
+PROJ_LIBS=-lrt -lm
 
 OBJROOT=obj
 OBJDIR=$(OBJROOT)
@@ -27,7 +28,7 @@ $(PROJECT): version.h $(OBJECTS)
 	echo "/* this file is autogenerated */" > build_info.h
 	echo "#define BUILD_INFO \"(compiled `date` by `whoami`@`hostname`)\"" >> build_info.h
 	$(CC) $(PROJ_CFLAGS) -c -o $(OBJDIR)/build.o build.c
-	$(CC) $(PROJ_LDFLAGS) -o $@ $(OBJECTS) $(OBJDIR)/build.o
+	$(CC) $(PROJ_LDFLAGS) -o $@ $(OBJECTS) $(OBJDIR)/build.o $(PROJ_LIBS)
 
 $(OBJDIR)/%.o: %.c
 	$(CC) $(PROJ_CFLAGS) -MMD -MF $(<:%.c=$(OBJDIR)/.%.d) -MT $(<:%.c=$(OBJDIR)/%.o) -c -o $@ $<
